--- a/.github/workflows/infra.preview-deploy.yml
+++ b/.github/workflows/infra.preview-deploy.yml
@@ -12,7 +12,7 @@ permissions:
         contents: read
 
 env:
-    AWS_REGION: ap-nottheast-1
+    AWS_REGION: ap-northeast-1
     TF_VERSION: 1.2.8
 
 defaults:
