--- a/.github/workflows/infra.preview-deploy.yml
+++ b/.github/workflows/infra.preview-deploy.yml
@@ -42,4 +42,7 @@ jobs:
             - name: Terraform init
               run: |
                 terraform init -no-color
+            - name: Terraform validate
+              run: |
+                terraform validate -no-color
 
