--- a/.github/workflows/infra.preview-deploy.yml
+++ b/.github/workflows/infra.preview-deploy.yml
@@ -26,6 +26,8 @@ jobs:
     preview:
         name: "Preview"
         runs-on: ubuntu-latest
+        outputs:
+          TF_PLAN_EXITCODE: ${{ steps.plan.outputs.exitcode }}
         steps:
             - name: Checkout repository
               uses: actions/checkout@v3
@@ -48,6 +50,7 @@ jobs:
               run: |
                 terraform validate -no-color
             - name: Terraform plan
+              continue-on-error: true
               id: plan
               run: |
                   terraform plan \
@@ -58,4 +61,35 @@ jobs:
                     -input=false \
                     -no-color \
                     -detailed-exitcode
+            - name: Slack Notify
+              if: steps.plan.outputs.exitcode == 0
+              uses: slackapi/slack-github-action@v1.26.0
+              with:
+                      channel-id: "${{ secrets.SLACK_CHANNEL_ID }}"
+                      payload: |
+                        {
+                          "attachments": [
+                            {
+                              "blocks": [
+                                {
+                                  "type": "header",
+                                  "text": {
+                                    "type": "plain_text",
+                                    "text": "Request for approve",
+                                    "emoji": true
+                                  }
+                                },
+                                {
+                                  "type": "section",
+                                  "text": {
+                                    "type": "mrkdwn",
+                                    "text": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+                                  }
+                                }
+                              ]
+                            }
+                          ]
+                        }
+              env:
+                SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
 
