--- a/.github/workflows/infra.preview-deploy.yml
+++ b/.github/workflows/infra.preview-deploy.yml
@@ -38,9 +38,11 @@ jobs:
         with:
           terraform_version: ${{ env.TF_VERSION }}
       - name: Terraform format
+        continue-on-error: true
         run: |
           terraform fmt -check
       - name: Configure AWS Credential
+        continue-on-error: true
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-region: ${{ env.AWS_REGION }}
