--- a/.github/workflows/infra.preview-deploy.yml
+++ b/.github/workflows/infra.preview-deploy.yml
@@ -68,7 +68,7 @@ jobs:
             -no-color \
             -detailed-exitcode
       - name: Slack Notify
-        if: steps.plan.outputs.exitcode == 3
+        #if: steps.plan.outputs.exitcode == 3
         uses: slackapi/slack-github-action@v1.22.0
         with:
           channel-id: "${{ secrets.SLACK_CHANNEL_ID }}"
