--- a/.github/workflows/infra.preview-deploy.yml
+++ b/.github/workflows/infra.preview-deploy.yml
@@ -32,27 +32,23 @@ jobs:
       TF_PLAN_EXITCODE: ${{ steps.plan.outputs.exitcode }}
     steps:
       - name: Cehckout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
       - name: Setup terraform
-        uses: hashicorp/setup-terraform@v3
+        uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: ${{ env.TF_VERSION }}
       - name: Terraform format
-        continue-on-error: true
         run: |
           terraform fmt -check
       - name: Configure AWS Credential
-        continue-on-error: true
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-region: ${{ env.AWS_REGION }}
           role-to-assume: ${{ secrets.AWS_IAM_ROLE_ARN }}
       - name: Terraform init
-        continue-on-error: true
         run: |
           terraform init -no-color
       - name: Terraform validate
-        continue-on-error: true
         run: |
           terraform validate -no-color
       - name: Terraform plan
@@ -68,8 +64,8 @@ jobs:
             -no-color \
             -detailed-exitcode
       - name: Slack Notify
-        #if: steps.plan.outputs.exitcode == 3
-        uses: slackapi/slack-github-action@v1.26.0
+        if: steps.plan.outputs.exitcode == 2
+        uses: slackapi/slack-github-action@v1.22.0
         with:
           channel-id: "${{ secrets.SLACK_CHANNEL_ID }}"
           payload: |
@@ -101,21 +97,21 @@ jobs:
   deploy:
     name: Deploy
     needs: preview
-    #if: needs.preview.outputs.TF_PLAN_EXITCODE == 3
+    if: needs.preview.outputs.TF_PLAN_EXITCODE == 2
     environment: production
     runs-on: ubuntu-latest
     steps:
       - name: Cehckout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
       - name: Setup terraform
-        uses: hashicorp/setup-terraform@v3
+        uses: hashicorp/setup-terraform@v2
         with:
           terraform_version: ${{ env.TF_VERSION }}
       - name: Terraform format
         run: |
           terraform fmt -check
       - name: Configure AWS Credential
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-region: ${{ env.AWS_REGION }}
           role-to-assume: ${{ secrets.AWS_IAM_ROLE_ARN }}
@@ -133,3 +129,34 @@ jobs:
             -input=false \
             -no-color \
             -auto-approve
+      - name: Slack Notify
+        if: always()
+        uses: slackapi/slack-github-action@v1.22.0
+        with:
+          channel-id: "${{ secrets.SLACK_CHANNEL_ID }}"
+          payload: |
+            {
+              "attachments": [
+                {
+                  "blocks": [
+                    {
+                      "type": "header",
+                      "text": {
+                        "type": "plain_text",
+                        "text": "Runner Finished: ${{ steps.apply.outcome }}",
+                        "emoji": true
+                      }
+                    },
+                    {
+                      "type": "section",
+                      "text": {
+                        "type": "mrkdwn",
+                        "text": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+                      }
+                    }
+                  ]
+                }
+              ]
+            }
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
